# spiceybun

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
examples/01_minimum_example/: main.py
ng-libs/ihp-sg13g2/libs.tech/ngspice/models/: resistors_mod_mismatch.lib
ng-libs/ihp-sg13g2/libs.tech/ngspice/osdi/: mosvar.osdi  psp103.osdi  psp103_nqs.osdi  r3_cmc.osdi
ng-libs/ihp-sg13g2/libs.tech/vacask/models/: sg13g2_dschottky_nbl1_mod.lib  sg13g2_hbt_mod.lib  sg13g2_moshv_mod.lib  sg13g2_moslv_mod.lib  sg13g2_svaricaphv_mod.lib  sg13g2_vacask_common.lib
ng-libs/ihp-sg13g2/libs.tech/vacask/osdi/: mosvar.osdi  r3_cmc.osdi
src/spiceybun/: measure_ngspice.py  ngspice.py  tb_test.spice  variable.py
src/spipy/: measure_ngspice.py  ngspice.py  variable.py
src/sppy/: ngspice.py
tests/: test_measure_ngspice.py  test_ngspice.py
tests/netlists/: input_flat_no_variables.spice  input_flat_variables.spice  input_subckt_lib_no_variables.spice
tests/rawfiles/: meas_mc_20_samples_2_columns.raw  meas_mc_20_samples_2_columns_fails.raw  meas_single_2_columns.raw
